--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Article 3 Page</title>
 </head>
 <body>
-    <h1>KUMPULAN ARTIKEL</h1>
+    <h1>Article 3 Page</h1>
     <div>
         <a href="lendraparker.html">Beberapa Jenis Spider-Man di Multiverse Marvel</a>
     <p>
@@ -38,4 +38,5 @@
    
 </body>
 </html>
+
 
